--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h2, h1, nav {
     background-color: #77C9D4;
 }
 
-h1, h2 {
+h1, h2, h3 {
     text-align: center;
     color: white;
 }
@@ -18,6 +18,10 @@ li {
     color: white;
 }
 
+li:hover{
+    background-color: white;
+    color: #77C9D4;
+}
 #container {
     width: 100%;
     height: 600px;
